further project preparation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: simple_animations
-description: Create awesome animations. Simplified.
-version: 0.0.2
+description: Create awesome animations. Simplified. Well documented. With many examples.
+version: 0.0.3
 author: Felix Blaschke <felix@felix-blaschke.de>
 homepage: https://github.com/felixblaschke/simple_animations
 
