--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: simple_animations
 description: Create awesome animations. Simplified. Well documented. With many examples.
-version: 0.0.5
+version: 0.0.6
 author: Felix Blaschke <felix@felix-blaschke.de>
 homepage: https://github.com/felixblaschke/simple_animations
 
@@ -14,6 +14,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: ^1.5.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
