--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,6 +1,6 @@
 include: package:pedantic/analysis_options.1.8.0.yaml
 
 analyzer:
-  exclude: [build/**]
+  exclude: [build/**, example/**]
   strong-mode:
     implicit-casts: true
