--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: simple_animations
 description: Create awesome animations. Simplified. Well documented. With many examples.
-version: 1.3.11
+version: 2.0.0
 homepage: https://github.com/felixblaschke/simple_animations
 
 environment:
@@ -9,6 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sa_multi_tween:
+    path: ../sa_multi_tween
+  sa_anicoto:
+    path: ../sa_anicoto
 
 dev_dependencies:
   flutter_test:
