--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,7 +19,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  simple_animations: ^1.2.0
+  simple_animations:
+    path: ../../simple_animations
+  sa_v1_migration:
+    path: ../../sa_v1_migration
+  supercharged: ^1.5.0
   url_launcher: ^5.0.2
 
   # The following adds the Cupertino Icons font to your application.
