--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: simple_animations
-description: Create awesome animations. Simplified. Well documented. With many examples.
+description: Powerful framework to create beautiful custom animations in no time.
 version: 2.0.0
 homepage: https://github.com/felixblaschke/simple_animations
 
