integrated sa_v1_migration package to provide a simpler migration path

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,8 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  simple_animations:
-    path: ../../simple_animations
+  simple_animations: ^2.1.0
   supercharged: ^1.5.0
   url_launcher: ^5.0.2
 
