--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: simple_animations
 description: Powerful framework to create beautiful custom animations in no time.
-version: 2.0.2
+version: 2.1.0
 homepage: https://github.com/felixblaschke/simple_animations
 
 environment:
@@ -12,6 +12,7 @@ dependencies:
   sa_multi_tween: ^1.0.0
   sa_anicoto: ^1.0.0
   sa_stateless_animation: ^1.0.0
+  sa_v1_migration: ^1.1.1
 
 dev_dependencies:
   flutter_test:
