--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,4 +3,4 @@ include: package:pedantic/analysis_options.1.8.0.yaml
 analyzer:
   exclude: [build/**, example/**]
   strong-mode:
-    implicit-casts: true
+    implicit-casts: false
