--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: simple_animations
 description: Powerful framework to create beautiful custom animations in no time.
-version: 2.2.0
+version: 2.2.1
 homepage: https://github.com/felixblaschke/simple_animations
 
 environment:
@@ -9,14 +9,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sa_multi_tween: ^1.1.0
-  sa_anicoto: ^1.0.0
-  sa_stateless_animation: ^1.0.0
-  sa_v1_migration: ^1.1.1
+  sa_multi_tween: ^1.1.1
+  sa_anicoto: ^1.0.2
+  sa_stateless_animation: ^1.0.1
+  sa_v1_migration: ^1.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  pedantic: ^1.9.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
