--- a/sa_stateless_animation/analysis_options.yaml
+++ b/sa_stateless_animation/analysis_options.yaml
@@ -1,6 +1,7 @@
-include: package:pedantic/analysis_options.1.8.0.yaml
+include: package:pedantic/analysis_options.1.9.0.yaml
 
 analyzer:
   exclude: [build/**]
   strong-mode:
     implicit-casts: false
+    implicit-dynamic: false
