--- a/sa_liquid/pubspec.yaml
+++ b/sa_liquid/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sa_liquid
-description: Liquid (part of Simple Animations Framework) provides beautiful, ready to use visuals.
-version: 0.0.1-beta.1
+description: Liquid (part of Simple Animations Framework)  provides beautiful visual animations that increases the visual quality of your Flutter application.
+version: 0.0.1-beta.2
 homepage: https://github.com/felixblaschke/simple_animations/blob/master/sa_liquid
 
 environment:
