--- a/sa_liquid/pubspec.yaml
+++ b/sa_liquid/pubspec.yaml
@@ -1,6 +1,6 @@
 name: sa_liquid
 description: Liquid (part of Simple Animations Framework)  provides beautiful visual animations that increases the visual quality of your Flutter application.
-version: 0.0.1-beta.2
+version: 0.0.1-beta.3
 homepage: https://github.com/felixblaschke/simple_animations/blob/master/sa_liquid
 
 environment:
@@ -16,6 +16,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  pedantic: ^1.9.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
