--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: simple_animations
 description: Powerful framework to create beautiful custom animations in no time.
-version: 2.4.0-beta.1
-homepage: https://github.com/felixblaschke/simple_animations/blob/master/simple_animations
+version: 2.4.0
+homepage: https://github.com/felixblaschke/simple_animations/blob/master
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
