--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: simple_animations
 description: Powerful package to create beautiful custom animations in no time.
-version: 2.5.0-internal.6
+version: 2.5.0
 homepage: https://github.com/felixblaschke/simple_animations/
 
 environment:
