--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,16 @@
 name: simple_animations
 description: Powerful package to create beautiful custom animations in no time.
-version: 2.5.0
-homepage: https://github.com/felixblaschke/simple_animations/
+version: 3.0.0-nullsafety.3
+homepage: https://github.com/felixblaschke/simple_animations
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  supercharged: ^1.12.0
-  sa_v1_migration: ^1.1.2
-  pedantic: ^1.9.2
+  supercharged: ^2.0.0-nullsafety.1
+  pedantic: ^1.10.0-nullsafety.3
 
 dev_dependencies:
   flutter_test:
