--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   supercharged: ^2.0.0-nullsafety.1
   pedantic: ^1.10.0-nullsafety.3
+  collection: ^1.15.0-nullsafety.5
 
 dev_dependencies:
   flutter_test:
