--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,16 @@
 name: simple_animations
 description: Powerful package to create beautiful custom animations in no time.
-version: 3.0.0-nullsafety.4
+version: 3.0.0-nullsafety.5
 homepage: https://github.com/felixblaschke/simple_animations
 
 environment:
-  sdk: ">=2.12.0-0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   supercharged: ^2.0.0-nullsafety.1
-  pedantic: ^1.10.0-nullsafety.3
-  collection: ^1.15.0-nullsafety.5
+  pedantic: ^1.11.0
 
 dev_dependencies:
   flutter_test:
