--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  supercharged: ^2.0.0-nullsafety.1
+  supercharged: ^2.0.0
   pedantic: ^1.11.0
 
 dev_dependencies:
