--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: simple_animations
 description: Powerful package to create beautiful custom animations in no time.
-version: 3.0.0-nullsafety.5
+version: 3.0.0
 homepage: https://github.com/felixblaschke/simple_animations
 
 environment:
