migrate to flutter_lints

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,13 +10,12 @@ dependencies:
   flutter:
     sdk: flutter
   supercharged: ^2.0.0
-  pedantic: ^1.11.0
+  flutter_lints: ^1.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   collection: ^1.15.0
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
