--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: simple_animations
 description: Powerful package to create beautiful custom animations in no time.
-version: 3.2.0
+version: 4.0.0-next.1
 homepage: https://github.com/felixblaschke/simple_animations
 
 environment:
