Upgrade code base to Flutter 3

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,3 +5,7 @@ analyzer:
   strong-mode:
     implicit-casts: false
     implicit-dynamic: false
+
+linter:
+  rules:
+    library_private_types_in_public_api: false
