--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: simple_animations
 description: Powerful package to create beautiful custom animations in no time.
-version: 5.0.0+2
+version: 5.0.0+3
 homepage: https://github.com/felixblaschke/simple_animations
+funding: https://www.paypal.com/donate/?hosted_button_id=9H2FEXT6VCWJ4
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
