--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: simple_animations
 description: Powerful package to create beautiful custom animations in no time.
-version: 5.0.0+3
+version: 5.0.1
 homepage: https://github.com/felixblaschke/simple_animations
 
 funding: 
