--- a/example/sa_flutter_app/analysis_options.yaml
+++ b/example/sa_flutter_app/analysis_options.yaml
@@ -23,6 +23,7 @@ linter:
   rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    library_private_types_in_public_api: false
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
