--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: simple_animations
 description: Powerful package to create beautiful custom animations in no time.
-version: 5.0.2
+version: 5.1.0
 homepage: https://github.com/felixblaschke/simple_animations
 
 funding: 
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  collection: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
